chore: rename environment variables in build.gradle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,10 +110,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias System.getenv("BITRISEIO_ANDROID_KEYSTORE_ALIAS")
-            keyPassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD")
-            storeFile file(System.getenv("HOME") + "/keystores/my_keystore.jks")
-            storePassword System.getenv("BITRISEIO_ANDROID_KEYSTORE_PASSWORD")
+            keyAlias System.getenv("RNAPP_RELEASE_KEY_ALIAS")
+            keyPassword System.getenv("RNAPP_RELEASE_KEY_PASSWORD")
+            storeFile file(System.getenv("RNAPP_RELEASE_STORE_FILE"))
+            storePassword System.getenv("RNAPP_RELEASE_STORE_PASSWORD")
         }
     }
 
