--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       # run tests
       - run:
           name: Test
-          command: yarn test
+          command: yarn test --coverage
 
       - store_artifacts:
           path: coverage
