--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,10 @@ version: 2
 jobs:
   build:
     environment:
+      CC_TEST_REPORTER_ID: f4372f8eac8c16aa5f00a2e10ec6266ced534f651f89015e5f08b5cdf5aa0ee1
       TERM: dumb
 
     docker:
-      # specify the version you desire here
       - image: circleci/android:api-27-node8-alpha
 
     working_directory: ~/repo
@@ -15,38 +15,57 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+          name: Restore Node Modules
+          key: node-modules-{{ checksum "package.json" }}
 
       - run:
           name: Install Dependencies
           command: yarn install
 
       - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+          name: Save Node Modules
+          path: node_modules
+          key: node-modules-{{ checksum "package.json" }}
       
       - run:
-          name: chmod permissions
+          name: Permissions
           path: android
           command: chmod +x ./gradlew
         
-      # run build
+      # Run build
+      - restore_cache:
+          name: Restore Android SDK Dependencies
+          key: android-sdk-dependencies
+
       - run:
           name: Build
           path: android
           command: ./gradlew assembleRelease
 
-      - store_artifacts:
-          path: android/app/build/outputs/apk  
+      - save_cache:
+          name: Save Android SDK Dependencies
+          paths:
+            - /usr/local/android-sdk-linux/build-tools/23.0.1
+            - /usr/local/android-sdk-linux/platforms/android-23
+            - /usr/local/android-sdk-linux/extras/android/m2repository
+          key: android-sdk-dependencies
 
-      # run tests
+      - store_artifacts:
+          path: android/app/build/outputs/apk/app-release.apk
+          destination: app-release.apk
+
+      # Setup CC
+      - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+
+      # Run tests
       - run:
           name: Test
-          command: yarn test --coverage
+          command: |
+            ./cc-test-reporter before-build
+            yarn test -- --coverage
+            ./cc-test-reporter after-build --exit-code $?
 
-      - store_artifacts:
-          path: coverage
